My first web page 2

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Collins</title>
 </head>
 <body><h1>About Me
-    <p>My name is Collins Agwunobi, and i am learning web development.
-        <p>Tech is becoming the new gold and i want to size this oppourtunity 
-            that Upskill has provided to enhance my skills.</p>
-    </p>
+    <p> <h3>My name is Collins Agwunobi, and i am learning web development.</h2>
+        <p> <h3>Tech is becoming the new gold and i want to size this oppourtunity that Upskill has provided to enhance my skills.</h2></p>
+    </p> <h3>I hope i learn well.</h2>
     
 </body>
 </html>
