Meta Charset UTF-8 Task

--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Collins</title>
+    <title>Document</title>
 </head>
-<body><h1>About Me
-    <p> <h3>My name is Collins Agwunobi, and i am learning web development.</h2>
-        <p> <h3>Tech is becoming the new gold and i want to size this oppourtunity that Upskill has provided to enhance my skills.</h2></p>
-    </p> <h3>I hope i learn well.</h2>
+<body>
     
 </body>
 </html>
