--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <title>Collins' Introduction</title>
+</head><h1>About Me</h1>
+<p><h3>I'm Collins Agwunobi, an admin staff at a hospital. When I'm not busy keeping things organized at work, you can often find me immersed in the world of music, where I find solace and inspiration. 
+    Recently, I've also been drawn to the exciting realm of technology, and I've taken the initiative to explore programs at Upskill to expand my knowledge and expertise in this field.</h2></p>
+<body><p><h3>Engaging in a tech program at Upskill offers me the chance to learn new skills and stay updated in a rapidly evolving field. It provides me with hands-on experience 
+    and networking opportunities with industry professionals.</h6></p>
     
 </body>
 </html>
