--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p><h3>I'm Collins Agwunobi, an admin staff at a hospital. When I'm not busy keeping things organized at work, you can often find me immersed in the world of music, where I find solace and inspiration. 
     Recently, I've also been drawn to the exciting realm of technology, and I've taken the initiative to explore programs at Upskill to expand my knowledge and expertise in this field.</h2></p>
 <body><p><h3>Engaging in a tech program at Upskill offers me the chance to learn new skills and stay updated in a rapidly evolving field. It provides me with hands-on experience 
-    and networking opportunities with industry professionals.</h6></p>
+    and networking opportunities with industry professionals. <Br>Thank you very much</Br></h6></p>
     
 </body>
 </html>
