--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collins' Introduction</title>
 </head><h1>About Me</h1>
+<img src="./Assets/Images/image.png" alt="">
 <p><h3>I'm Collins Agwunobi, an admin staff at a hospital. When I'm not busy keeping things organized at work, you can often find me immersed in the world of music, where I find solace and inspiration. 
     Recently, I've also been drawn to the exciting realm of technology, and I've taken the initiative to explore programs at Upskill to expand my knowledge and expertise in this field.</h2></p>
 <body><p><h3>Engaging in a tech program at Upskill offers me the chance to learn new skills and stay updated in a rapidly evolving field. It provides me with hands-on experience 
     and networking opportunities with industry professionals. <Br>Thank you very much</Br></h6></p>
-    
+   <h3>My Ordered list of food item</h3>
+    <ol>
+        <li>Yam</li>
+        <li>Beans</li>
+        <li>Fish
+        </li>
+        <li>Chicken</li>
+    </ol>
+    <h3>Unordered List</h3>
+    <ul>
+        <li>Naira</li>
+        <li>Electricity tarrif</li>
+        <Li>Cost of living</Li>
+        <Li>Cars on the road</Li>
+    </ul>
+    <a href="./Page2.html" target="_blank">Upskill Second Page</a>
 </body>
 </html>
