--- a/Page2.html
+++ b/Page2.html
@@ -7,6 +7,13 @@
 </head>
 <body> <h2>Second Page
 </h2>
-    <a href="./index.html">First Page</a>
+    <a href="./index.html">Upskill First Page</a>
+    <a href="./Page3.html" target="_blank">Upskill Third Page</a>
+</body> <div>
+    This is a block element, anything after will fall down
+</div>
+<span>This is an inline element</span> <span>It can accomodate more in the same line except it is a block element</span>
+<body>
+    
 </body>
 </html>
