--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <a href="./Page2.html" target="_blank">Upskill Second Page</a>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collins' Introduction</title>
 </head><h1>About Me</h1>
-<img src="./Assets/Images/image.png" alt="">
+<img src="./Assets/Images/image.png" width="600" height="300">
+<img src="https://media.istockphoto.com/id/1840351675/photo/light-bulb-portal-in-human-head.jpg?s=612x612&w=0&k=20&c=osmfGgb42w23Y5IH4uOQpgxF2fK9RK2eiKXqzjoUzDw=" width="600" height="300">
 <p><h3>I'm Collins Agwunobi, an admin staff at a hospital. When I'm not busy keeping things organized at work, you can often find me immersed in the world of music, where I find solace and inspiration. 
     Recently, I've also been drawn to the exciting realm of technology, and I've taken the initiative to explore programs at Upskill to expand my knowledge and expertise in this field.</h2></p>
 <body><p><h3>Engaging in a tech program at Upskill offers me the chance to learn new skills and stay updated in a rapidly evolving field. It provides me with hands-on experience 
@@ -25,6 +27,6 @@
         <Li>Cost of living</Li>
         <Li>Cars on the road</Li>
     </ul>
-    <a href="./Page2.html" target="_blank">Upskill Second Page</a>
+    
 </body>
 </html>
